--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "es6",
     "module": "commonjs",
     "moduleResolution": "node",
     "sourceMap": true,
@@ -13,7 +13,7 @@
       "./node_modules/@types/"
     ]
   },
-  "compileOnSave": true,
+  "compileOnSave": false,
   "exclude": [
     "node_modules/*",
     "**/*-aot.ts"
